Update languages part 2 - 1/3

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Automatisch
 OPTION_VALUE_SEC=Sekunde
 OPTION_VALUE_SECS=Sekunden
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+;TODO: OPTION_VALUE_PLAIN=Stylized
+;TODO: OPTION_VALUE_OLINE1=With thin edge
+;TODO: OPTION_VALUE_OLINE2=With thick edge
 
 OPTION_VALUE_SIMPLE=Einfach
 OPTION_VALUE_ZOOM=Vergrößern
@@ -103,7 +103,7 @@ SING_OPTIONS_LYRICS=Lyrics
 SING_OPTIONS_THEMES=Design
 SING_OPTIONS_RECORD=Aufnahme
 SING_OPTIONS_ADVANCED=Erweitert
-SING_OPTIONS_EXIT=zurück
+SING_OPTIONS_EXIT=Zurück
 
 SING_OPTIONS_GAME_WHEREAMI=Spieloptionen
 SING_OPTIONS_GAME_DESC=Allgemeine Spieleinstellungen
@@ -112,15 +112,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Schwierigkeit
 SING_OPTIONS_GAME_LANGUAGE=Sprache
 SING_OPTIONS_GAME_TABS=Ordner
 SING_OPTIONS_GAME_SORTING=Sortierung
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Aktiviere das Gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Grafikoptionen
 SING_OPTIONS_GRAPHICS_DESC=Grafikeinstellungen
 SING_OPTIONS_GRAPHICS_RESOLUTION=Auflösung
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Vollbild
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Singeffekte
+SING_OPTIONS_GRAPHICS_SCREENFADE=Bildschirm-Fade
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Lade-Animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisierung
 SING_OPTIONS_GRAPHICS_LINEBONUS=Phrasenbonus
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Videogröße
@@ -159,8 +159,8 @@ SING_OPTIONS_RECORD_CHANNEL=Kanal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Erweiterte Optionen
 SING_OPTIONS_ADVANCED_DESC=Erweiterte Einstellungen
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oszilloskop
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Sicherheitsabfr.
 SING_OPTIONS_ADVANCED_LINEBONUS=Phrasenbonus
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
@@ -171,20 +171,20 @@ SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto Party-Menü
 SING_LEGEND_SELECT=Auswählen
 SING_LEGEND_NAVIGATE=Navigieren
 SING_LEGEND_CONTINUE=Weiter
-SING_LEGEND_ESC=zurück
+SING_LEGEND_ESC=Zurück
 
 ;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
+SING_PLAYER_READY=Spieler bereit zum Singen
+SING_PLAYER_COUNT=Anzahl der Spieler
 ;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_NAME=Schreib deinen Namen
+SING_PLAYER_COLOR=Wähle eine Farbe
+SING_PLAYER_LEVEL=Wähle ein Level
+SING_PLAYER_AVATAR=Wähle deinen Avatar
 
 SING_DIFFICULTY_DESC=Schwierigkeitsgrad auswählen
 SING_DIFFICULTY_WHEREAMI=Schwierigkeitsgrad
-SING_DIFFICULTY_CONTINUE=zur Song-Auswahl
+SING_DIFFICULTY_CONTINUE=Zur Song-Auswahl
 SING_EASY=Einfach
 SING_MEDIUM=Mittel
 SING_HARD=Schwierig
@@ -198,11 +198,11 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Legende
+SING_SONG_SELECTION_LEGEND_VIDEO=Video
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duett
 
 SING_TIME=ZEIT
 SING_TOTAL=Gesamt
@@ -297,7 +297,7 @@ PARTY_TEAMS_PLAYER1=Spieleranzahl
 PARTY_TEAMS_PLAYER2=Spieleranzahl
 PARTY_TEAMS_PLAYER3=Spieleranzahl
 
-PARTY_LEGEND_CONTINUE=weiter
+PARTY_LEGEND_CONTINUE=Weiter
 
 PARTY_OPTIONS_DESC=Einstellungen für das Partyspiel.
 PARTY_OPTIONS_WHEREAMI=Party Optionen
@@ -336,7 +336,7 @@ NEXT_ROUND=Nächste Runde:
 
 PARTY_DISMISSED=Ausgeschieden!
 PARTY_SCORE_WINS=%s
-PARTY_SCORE_WINS2=hat gewonnen!
+PARTY_SCORE_WINS2=Hat gewonnen!
 
 MODE_RANDOM_NAME= zufälliger Modus
 MODE_RANDOM_DESC=Sei gespannt! Das Spiel entscheidet zufällige Spiel-Modi für euch.
@@ -702,12 +702,12 @@ OPTION_VALUE_PLAYER=Spieler
 SING_ABOUT=Über
 SING_ABOUT_DESC=Über Utrastar Deluxe WorldParty
 ABOUT_MAIN=Über...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USDX_DEVELOPEDBY=Entwickelt von
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Entwickelt von
+DEVELOPERS_OVERVIEW=Menschen, die zu diesem Projekt beigetragen haben:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Besuchen Sie uns für weitere Informationen.\n\nhttps://ultrastar-es.org
