--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -23,7 +23,7 @@ OPTION_VALUE_PLAYLIST=Playlist
 OPTION_VALUE_BORDERLESS=Plein écran
 
 OPTION_VALUE_WHENNOVIDEO=Si pas de vidéo
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Quand pas de vidéo et d'image
 
 OPTION_VALUE_SMALL=Petit
 OPTION_VALUE_BIG=Grand
@@ -40,9 +40,9 @@ OPTION_VALUE_AUTO=Automatique
 OPTION_VALUE_SEC=Seconde
 OPTION_VALUE_SECS=Secondes
 
-;TODO: OPTION_VALUE_PLAIN=stylized
-;TODO: OPTION_VALUE_OLINE1=with thin edge
-;TODO: OPTION_VALUE_OLINE2=with thick edge
+OPTION_VALUE_PLAIN=Stylisé
+OPTION_VALUE_OLINE1=Avec bord mince
+OPTION_VALUE_OLINE2=Avec bord épais
 
 OPTION_VALUE_SIMPLE=Syllabes
 OPTION_VALUE_ZOOM=Zoomer
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Choix des joueurs
 OPTION_VALUE_OPEN_MENU=Ouvrir le menu
 
 SING_LOADING=Chargement...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Chargement des chansons
+SING_LOADING_CHECK_FOLDER=Recherche des chansons dans le dossier %s
+SING_LOADING_LOAD_FOLDER=Chargement des chansons à partir du dossier %s
 
 SING_CHOOSE_MODE=Choisissez un mode de jeu
 SING_SING=Chanter
@@ -112,15 +112,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Difficulté
 SING_OPTIONS_GAME_LANGUAGE=Langue
 SING_OPTIONS_GAME_TABS=Dossier
 SING_OPTIONS_GAME_SORTING=Tri par
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activer gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Options graphiques
 SING_OPTIONS_GRAPHICS_DESC=Paramètres des graphismes
 SING_OPTIONS_GRAPHICS_RESOLUTION=Résolution
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Plein écran
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Effet de chant
+SING_OPTIONS_GRAPHICS_SCREENFADE=Fondu écran
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Charge animation
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualisation
 SING_OPTIONS_GRAPHICS_LINEBONUS=Bonus de phrases
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Taille vidéo
@@ -159,11 +159,10 @@ SING_OPTIONS_RECORD_CHANNEL=Canal
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Options avancées
 SING_OPTIONS_ADVANCED_DESC=Paramètres avancés
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Débogage
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Confirm. suppression
 SING_OPTIONS_ADVANCED_LINEBONUS=Bonus des phrases
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Choix ap. chanson
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Menu fête auto
 
@@ -173,14 +172,14 @@ SING_LEGEND_NAVIGATE=Naviguer
 SING_LEGEND_CONTINUE=Continuer
 SING_LEGEND_ESC=Retour
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Profils
+SING_PLAYER_READY=Joueurs prêts à chanter
+SING_PLAYER_COUNT=Nombre de joueurs
+SING_PLAYER_EDIT=Personnaliser un joueur
+SING_PLAYER_NAME=Écrivez votre nom
+SING_PLAYER_COLOR=Choisissez une couleur
+SING_PLAYER_LEVEL=Choisissez un niveau
+SING_PLAYER_AVATAR=Sélectionnez votre avatar
 
 SING_DIFFICULTY_DESC=Sélectionnez le niveau de difficulté
 SING_DIFFICULTY_WHEREAMI=Difficulté
@@ -198,11 +197,11 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONG_IN_CAT=Chanson
 SING_SONGS_IN_CAT=Chansons
 PLAYLIST_CATTEXT=Playlist: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Légende
+SING_SONG_SELECTION_LEGEND_VIDEO=Vidéo
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duo
 
 SING_TIME=Temps
 SING_TOTAL=Total
@@ -513,8 +512,8 @@ MSG_INSERT_USER_CANCEL=Annuler
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Error connect to the website: %0:s!
 ;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
 
-;TODO: SONG_SCORE_MAX=Best:
-;TODO: SONG_SCORE_MEDIA=Average:
+SONG_SCORE_MAX=Meilleur:
+SONG_SCORE_MEDIA=Moyenne:
 
 ;TODO: SCORE_SEND_DESC=Send Score
 ;TODO: SCORE_SEND=Send
@@ -523,7 +522,7 @@ MSG_INSERT_USER_CANCEL=Annuler
 ;TODO: SCORE_SAVE=Save
 
 SCORE_DOWNLOAD_TITLE=Téléchargement
-;TODO: SCORE_DOWNLOAD_SONG=Song:
+SCORE_DOWNLOAD_SONG=Chanson:
 SCORE_DOWNLOAD_CREATE_LIST=Prépartion de la liste...
 SCORE_DOWNLOAD_RECEIVE_LIST=Téléchargement...
 SCORE_DOWNLOAD_CANCEL=Annuler
@@ -595,7 +594,7 @@ SING_OPTIONS_WEBCAM_EFFECT=Effet
 SING_OPTIONS_WEBCAM_BRIGHTNESS=Luminosité
 SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
-;TODO: SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
+SING_OPTIONS_WEBCAM_PREVIEW=Activate preview
 SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Activer l'aperçu
 SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Desactiver l'aperçu
 
@@ -625,23 +624,23 @@ NAME_PLAYERS_COUNT=Nombre de joueurs
 NAME_CURRENT_PLAYER=Joueur
 
 SING_OPTIONS_GAME_SONGMENU=Menu
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
+OPTION_VALUE_ROULETTE=Roulette
+OPTION_VALUE_CHESSBOARD=Échiquier
+OPTION_VALUE_CAROUSEL=Carrousel
+OPTION_VALUE_SLOT_MACHINE=Machine à sous
 OPTION_VALUE_LIST=Liste
-;TODO: OPTION_VALUE_MOSAIC=Tile
+OPTION_VALUE_MOSAIC=Tuile
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Chanter
-;TODO: OPTION_VALUE_ACTUAL=Actual
-OPTION_VALUE_NEXT=Suivant
+OPTION_VALUE_ACTUAL=Supérieur
+OPTION_VALUE_NEXT=Inférieure
 OPTION_VALUE_OTHER=Autre
-;TODO: OPTION_VALUE_FILL=Fill
-;TODO: OPTION_VALUE_OUTLINE=Outline
+OPTION_VALUE_FILL=Rempli
+OPTION_VALUE_OUTLINE=Bord
 OPTION_VALUE_GRAY=Gris
 OPTION_VALUE_WHITE=Blanc
 ;TODO: OPTION_VALUE_TURQUOISE=Turquoise
@@ -668,7 +667,7 @@ JUKEBOX_SONGOPTIONS_VIDEO=Paramètres vidéo
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Taille
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparency
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparence
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Couleur
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
@@ -687,7 +686,7 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Bleu
 
 SING_SONG_CREDITS=Crédits
 ;TODO: SING_JUKEBOX=Jukebox
-;TODO: SING_JUKEBOX_DESC=Listen to my collection
+SING_JUKEBOX_DESC=Écouter mes chansons
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 ;TODO: JUKEBOX_OPTIONS_DESC=Playlist Options
 ;TODO: JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options
@@ -702,12 +701,12 @@ OPTION_VALUE_PLAYER=Joueur
 SING_ABOUT=À propos
 SING_ABOUT_DESC=À propos Ultrastar Deluxe WorldParty
 ABOUT_MAIN=À propos...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USDX_DEVELOPEDBY=Développé par
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Découvrez une nouvelle façon de chanter, seul, en couple ou entre amis. \n L'amusement est garanti.\n\nWorldParty est une fork de la version originale Ultrastar Deluxe 1.1 conçu et développé par l'équipe UltraStar España, il compte avec la plus grande communauté de karaoké.\n\n\nCe programme est gratuit et libre sous licence GPL. \n\n Visitez-nous pour plus d'informations.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Développé par
+DEVELOPERS_OVERVIEW=Personnes qui ont contribué à ce projet:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visitez-nous pour plus d'informations.\n\nhttps://ultrastar-es.org
