--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -16,14 +16,14 @@ OPTION_VALUE_TITLE=Título
 OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_TITLE2=Título2
 OPTION_VALUE_ARTIST2=Artista2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Ano
+OPTION_VALUE_DECADE=Década
 OPTION_VALUE_PLAYLIST=Listaxe
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Maximizada
 
 OPTION_VALUE_WHENNOVIDEO=Se non hai video
-;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
+OPTION_VALUE_WHENNOVIDEOANDIMAGE=Cando non hai vídeo e imaxe
 
 OPTION_VALUE_SMALL=Pequeno
 OPTION_VALUE_BIG=Grande
@@ -69,9 +69,9 @@ OPTION_VALUE_SELECT_PLAYERS=Elixir Xogadores
 OPTION_VALUE_OPEN_MENU=Abrir menú
 
 SING_LOADING=Cargando...
-;TODO: SING_LOADING_SONGS=Loading songs
-;TODO: SING_LOADING_CHECK_FOLDER=Searching songs in folder %s
-;TODO: SING_LOADING_LOAD_FOLDER=Loading songs from folder %s
+SING_LOADING_SONGS=Cargando cancións
+SING_LOADING_CHECK_FOLDER=Buscando cancións no cartafol %s
+SING_LOADING_LOAD_FOLDER=Cargando cancións do cartafol %s
 
 SING_CHOOSE_MODE=Elixe
 SING_SING=Canta!
@@ -98,7 +98,6 @@ SING_OPTIONS_WHEREAMI=Opcións
 SING_OPTIONS_GAME=Xogo
 SING_OPTIONS_GRAPHICS=Gráficos
 SING_OPTIONS_SOUND=Son
-;TODO: SING_OPTIONS_INPUT=Input
 SING_OPTIONS_LYRICS=Letras
 SING_OPTIONS_THEMES=Aparencia
 SING_OPTIONS_RECORD=Micrófonos
@@ -107,20 +106,20 @@ SING_OPTIONS_EXIT=Volta
 
 SING_OPTIONS_GAME_WHEREAMI=Opcións do xogo
 SING_OPTIONS_GAME_DESC=Cambiar as preferencias xerais do xogo
-;TODO: SING_OPTIONS_GAME_PLAYERS=Players
+SING_OPTIONS_GAME_PLAYERS=Xogadores
 SING_OPTIONS_GAME_DIFFICULTY=Dificultade
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_TABS=Etiquetas
 SING_OPTIONS_GAME_SORTING=Clasificar por
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activar o gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opcións gráficas
 SING_OPTIONS_GRAPHICS_DESC=Cambiar os axustes do video
 SING_OPTIONS_GRAPHICS_RESOLUTION=Resolución
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pantalla completa
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Efectes de cantar
+SING_OPTIONS_GRAPHICS_SCREENFADE=Fos de pantalla
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animació càrrega
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualización
 SING_OPTIONS_GRAPHICS_LINEBONUS=Bonus de liña
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamaño do video
@@ -159,11 +158,10 @@ SING_OPTIONS_RECORD_CHANNEL=Canle
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Opcións avanzadas
 SING_OPTIONS_ADVANCED_DESC=Opcións avanzadas
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Debug
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscil·loscopi
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Preguntar ó borrar
 SING_OPTIONS_ADVANCED_LINEBONUS=Bonus de liña
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Ó seleccionar canción
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto menú de festa
 
@@ -172,14 +170,14 @@ SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Proseguir
 SING_LEGEND_ESC=Volta
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Perfís
+SING_PLAYER_READY=Xogadores listos para cantar
+SING_PLAYER_COUNT=Número de xogadores
+SING_PLAYER_EDIT=Personaliza un xogador
+SING_PLAYER_NAME=Escribe o teu nome
+SING_PLAYER_COLOR=Escolla unha cor
+SING_PLAYER_LEVEL=Elixe un nivel
+SING_PLAYER_AVATAR=Selecciona o teu avatar
 
 SING_DIFFICULTY_DESC=Selecciona a dificultade
 SING_DIFFICULTY_WHEREAMI=Dificultade
@@ -197,11 +195,11 @@ SING_SONG_SELECTION_PLAYLIST=Listaxe
 SING_SONG_IN_CAT=Canción
 SING_SONGS_IN_CAT=Cancións
 PLAYLIST_CATTEXT=Listaxe: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_TITLE=Lenda
+SING_SONG_SELECTION_LEGEND_VIDEO=Vídeo
+SING_SONG_SELECTION_LEGEND_MEDLEY=Versión curta
+SING_SONG_SELECTION_LEGEND_MEDLEYC=Versión curta calculada
+SING_SONG_SELECTION_LEGEND_DUET=Dueto
 
 SING_TOTAL=Total
 SING_MODE=Só
@@ -622,11 +620,11 @@ NAME_PLAYERS_COUNT=Nº de xogadores
 NAME_CURRENT_PLAYER=Xogador
 
 SING_OPTIONS_GAME_SONGMENU=Menú cancións
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
-;TODO: OPTION_VALUE_SLOT_MACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
+OPTION_VALUE_ROULETTE=Roleta
+OPTION_VALUE_CHESSBOARD=Tabuleiro de xadrez
+OPTION_VALUE_CAROUSEL=Carrusel
+OPTION_VALUE_SLOT_MACHINE=Máquina tragamonedas
+ OPTION_VALUE_LIST=Lista
 ;TODO: OPTION_VALUE_MOSAIC=Tile
 
 SING_OPTIONS_JUKEBOX=Jukebox
@@ -634,9 +632,9 @@ SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Cantar
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
-;TODO: OPTION_VALUE_OTHER=Other
+OPTION_VALUE_ACTUAL=Superior
+OPTION_VALUE_NEXT=Inferior
+OPTION_VALUE_OTHER=Outro
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
 ;TODO: OPTION_VALUE_GRAY=Gray
@@ -665,7 +663,7 @@ OPTION_VALUE_TO_SING=Cantar
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Transparencia
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Cor
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_LINE=Line
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Property
@@ -682,9 +680,9 @@ JUKEBOX_SONGOPTIONS_SAVE=Gardar
 ;TODO: JUKEBOX_SONGOPTIONS_DEFAULT=Default
 ;TODO: JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Saved!
 
-;TODO: SING_SONG_CREDITS=Credits
+SING_SONG_CREDITS=Créditos
 SING_JUKEBOX=Jukebox
-;TODO: SING_JUKEBOX_DESC=Listen to my collection
+SING_JUKEBOX_DESC=Escoitar as miñas cancións
 ;TODO: JUKEBOX_MODE=Jukebox Mode
 ;TODO: JUKEBOX_OPTIONS_DESC=Playlist Options
 ;TODO: JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options
@@ -696,15 +694,15 @@ JUKEBOX_OPTIONS_PLAYLIST_MODE=Modo
 OPTION_VALUE_ALL=Todo
 OPTION_VALUE_PLAYER=Xogador
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe WorldParty
-;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+SING_ABOUT=Acerca de
+SING_ABOUT_DESC=Acerca de Ultrastar Deluxe WorldParty
+ABOUT_MAIN=Acerca de...
+ABOUT_USDX_DEVELOPEDBY=Desenvolvido por
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
-;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_OVERVIEW=Descubre unha nova forma de cantar, só, en parella ou cos amigos. \n A diversión está garantida.\n\nWorldParty é un fork da versión orixinal Ultrastar Deluxe 1.1 deseñado e desenvolvido polo equipo UltraStar España, conta coa maior comunidade de karaoke.\n\n\nEste programa é gratuíto e libre baixo a licenza GPL. \n\n Visita connosco para obter máis información.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Desenvolvido por
+DEVELOPERS_OVERVIEW=Persoas que contribuíron a este proxecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visita connosco para obter máis información.\n\nhttps://ultrastar-es.org
