--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -112,15 +112,15 @@ SING_OPTIONS_GAME_DIFFICULTY=Duilgheadas
 SING_OPTIONS_GAME_LANGUAGE=Cànan
 SING_OPTIONS_GAME_TABS=Tabaichean
 SING_OPTIONS_GAME_SORTING=Seòrsachadh
-;TODO: SING_OPTIONS_GAME_JOYPAD_SUPPORT=Controller support
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Gnìomhaich gamepad
 
 SING_OPTIONS_GRAPHICS_WHEREAMI=Roghainnean na grafaigeachd
 SING_OPTIONS_GRAPHICS_DESC=Roghainnean na grafaigeachd
 SING_OPTIONS_GRAPHICS_RESOLUTION=Dùmhlachd-bhreacaidh
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Làn-sgrìn
-;TODO: SING_OPTIONS_GRAPHICS_EFFECTSING=Sing Effects
-;TODO: SING_OPTIONS_GRAPHICS_SCREENFADE=Screen Fading
-;TODO: SING_OPTIONS_GRAPHICS_LOADANIMATION=Load Animation
+SING_OPTIONS_GRAPHICS_EFFECTSING=Èifeachdan seinne
+SING_OPTIONS_GRAPHICS_SCREENFADE=Crìonadh na sgrìn
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Luchdaich beòthachadh
 SING_OPTIONS_GRAPHICS_VISUALIZER=Fir chlis
 SING_OPTIONS_GRAPHICS_LINEBONUS=Duais loidhne
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Meud an fhilm
@@ -159,11 +159,10 @@ SING_OPTIONS_RECORD_CHANNEL=Seanail
 
 SING_OPTIONS_ADVANCED_WHEREAMI=Roghainnean adhartach
 SING_OPTIONS_ADVANCED_DESC=Roghainnean adhartach
-;TODO: SING_OPTIONS_ADVANCED_DEBUG=Debug
-;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
+SING_OPTIONS_ADVANCED_DEBUG=Dì-bhugachadh
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Oscilloscope
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Ceistean dìonaidh
 SING_OPTIONS_ADVANCED_LINEBONUS=Duais loidhne
-;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Às dèidh òrain tagh
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Fèin-chlàr-cèilidh
 
@@ -173,14 +172,14 @@ SING_LEGEND_NAVIGATE=Seòl
 SING_LEGEND_CONTINUE=Air adhart
 SING_LEGEND_ESC=Air ais
 
-;TODO: SING_PLAYER_TITLE=Profiles
-;TODO: SING_PLAYER_READY=Players ready to sing
-;TODO: SING_PLAYER_COUNT=Number of players
-;TODO: SING_PLAYER_EDIT=Customize a player
-;TODO: SING_PLAYER_NAME=Write your name
-;TODO: SING_PLAYER_COLOR=Pick a color
-;TODO: SING_PLAYER_LEVEL=Choose a level
-;TODO: SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Pròifil
+SING_PLAYER_READY=Luchd-cluiche deiseil airson seinn
+SING_PLAYER_COUNT=Àireamh de chluicheadairean
+SING_PLAYER_EDIT=Dèan gnàthachadh air cluicheadair
+SING_PLAYER_NAME=Sgrìobh do ainm
+SING_PLAYER_COLOR=Tagh dath
+SING_PLAYER_LEVEL=Tagh ìre
+SING_PLAYER_AVATAR=Tagh do avatar
 
 SING_DIFFICULTY_DESC=Tagh an duilgheadas
 SING_DIFFICULTY_WHEREAMI=Duilgheadas
@@ -195,14 +194,14 @@ SING_SONG_SELECTION_GOTO=Rach gu …
 SING_SONG_SELECTION=Taghadh an òrain
 SING_SONG_SELECTION_MENU=Clàr-taice
 SING_SONG_SELECTION_PLAYLIST=Liosta-chluich
-;TODO: SING_SONG_IN_CAT=Song
+SING_SONG_IN_CAT=Òran
 SING_SONGS_IN_CAT=Òrain
 PLAYLIST_CATTEXT=Liosta-chluich: %s
-;TODO: SING_SONG_SELECTION_LEGEND_TITLE=Legend
-;TODO: SING_SONG_SELECTION_LEGEND_VIDEO=Video
+SING_SONG_SELECTION_LEGEND_TITLE=Sgeulachd
+SING_SONG_SELECTION_LEGEND_VIDEO=Bhidio
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
 ;TODO: SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
-;TODO: SING_SONG_SELECTION_LEGEND_DUET=Duet
+SING_SONG_SELECTION_LEGEND_DUET=Duet
 
 SING_TOTAL=Iomlan
 SING_MODE=Seinn ’nad aonar
@@ -666,7 +665,7 @@ JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Àirde
 JUKEBOX_SONGOPTIONS_LYRIC=Roghainnean nam faclan
 JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Meud
 JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Suidheachadh
-JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
+JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Follaiseachd
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Dath
 JUKEBOX_SONGOPTIONS_LYRIC_LINE=Loidhne
 JUKEBOX_SONGOPTIONS_LYRIC_PROPERTY=Cruth
@@ -700,12 +699,12 @@ OPTION_VALUE_PLAYER=Cluicheadair
 SING_ABOUT=Mu dhèidhinn
 SING_ABOUT_DESC=Mu Ultrastar Deluxe WorldParty
 ABOUT_MAIN=Mu dhèidhinn…
-;TODO: ABOUT_USDX_DEVELOPEDBY=Developed by
+ABOUT_USDX_DEVELOPEDBY=Leasaichte le
 ;TODO: ABOUT_CHECK_CHECKING=Checking for new updates...
 ;TODO: ABOUT_CHECK_AVAILABLE=There is a new version available
 ;TODO: ABOUT_CHECK_UPTODATE=WorldParty is up to date
 ;TODO: ABOUT_CHECK_CONNECTION=There is no Internet connection
 ;TODO: ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
 
-;TODO: DEVELOPERS_TITLE=Developed by
-;TODO: DEVELOPERS_OVERVIEW=People who has contributed to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Leasaichte le
+DEVELOPERS_OVERVIEW=Daoine a tha air cur ris a 'phròiseact seo:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiX\n\n\n Tadhail oirnne airson barrachd fiosrachaidh.\n\nhttps://ultrastar-es.org
